- Fixed bug #32076 (ReflectionMethod :: isDestructor() always return true)   (Patch by Antony Dogval)